--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Sarvodaya
 middle_name: 
 last_name: Singh
+repository: Sarvodayasingh21/Sarvodayasingh21.github.io
 email: sarvodayasingh21@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
